# dfa

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  style.sh
.circleci/: config.yml
cmake/: dfaConfig.cmake.in
dfa/: dfa.cc  dfa.h  main.cc
dfa/test/: CMakeLists.txt  dfa_test.cc  m1.dfa
